--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,8 @@
 #
-# see http://editorconfig.org/
+# see https://editorconfig.org/
 #
+
+root = true
 
 [*]
 charset = utf-8
@@ -16,3 +18,6 @@ indent_style = tab
 
 [*.S]
 indent_size = 8
+
+[*.yml]
+indent_size = 2
